practice3-kubernetes/k8s/worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: uptime-monitor
spec:
  selector:
    app: worker
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: uptime-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: uptime-worker:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8001
